field-forms/objects/Form_Question__c/Form_Question__c.object-meta.xml
<CustomObject>
    <label>Form Question</label>
    <nameField>
        <displayFormat>Q-{000000}</displayFormat>
        <label>Form Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>