field-forms/objects/Form_Question__c/fields/Active_Message__c.field-meta.xml
<CustomField>
    <fullName>Active_Message__c</fullName>
    <label>Active Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>