field-forms/objects/Form_Question__c/fields/Calculation_Result_Format__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Result_Format__c</fullName>
    <defaultValue>&quot;Decimal&quot;</defaultValue>
    <description>How to format the computed value for display and storage. Decimal keeps the raw number; Currency prefixes the locale's currency symbol; Percent multiplies by 100 and appends %; Integer rounds to whole numbers.</description>
    <inlineHelpText>Display format for the computed value.</inlineHelpText>
    <label>Calculation Result Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Decimal</fullName>
                <default>true</default>
                <label>Decimal</label>
            </value>
            <value>
                <fullName>Integer</fullName>
            </value>
            <value>
                <fullName>Currency</fullName>
            </value>
            <value>
                <fullName>Percent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>