field-forms/objects/Form_Question__c/fields/Conditions__c.field-meta.xml
<CustomField>
    <fullName>Conditions__c</fullName>
    <label>Conditions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>