field-forms/objects/Form_Question__c/fields/Decimal_Places__c.field-meta.xml
<CustomField>
    <fullName>Decimal_Places__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Number of decimal places allowed (0 = integer only, 1-9 = decimal places)</inlineHelpText>
    <label>Decimal Places</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>