field-forms/objects/Form_Question__c/fields/Default_Value_Source__c.field-meta.xml
<CustomField>
    <fullName>Default_Value_Source__c</fullName>
    <description>Field path on the host record (e.g. Service_Appointment.Account.Name, WorkOrder.Subject) read at runtime to pre-fill this question. Spanning lookups are supported. Empty answers are populated; existing answers are not overwritten.</description>
    <inlineHelpText>Field path on the host record to pre-fill this question (e.g. WorkOrder.Subject or Service_Appointment.Account.Name).</inlineHelpText>
    <label>Default Value Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>