field-forms/objects/Form_Question__c/fields/Default_Value_Static__c.field-meta.xml
<CustomField>
    <fullName>Default_Value_Static__c</fullName>
    <description>Literal default value applied when the answer is empty. If both Default Value Source and Default Value Static are set, Source wins and Static is used only when the source resolves to null.</description>
    <inlineHelpText>Literal default for this question (used when Default Value Source is empty or returns null).</inlineHelpText>
    <label>Default Value (Static)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>