field-forms/objects/Form_Question__c/fields/External_Reference__c.field-meta.xml
<CustomField>
    <fullName>External_Reference__c</fullName>
    <externalId>true</externalId>
    <label>External Reference</label>
    <length>18</length>
    <type>Text</type>
</CustomField>