field-forms/objects/Form_Question__c/fields/Form_Question_Catalog__c.field-meta.xml
<CustomField>
    <fullName>Form_Question_Catalog__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Reference to the canonical catalog entry. Resolved by the snapshot writer when assembling the renderer payload; this binding's own content fields are used as fallback during Phase 2 migration. Restricted delete protects historical responses when the catalog entry is referenced by snapshots.</description>
    <label>Form Question Catalog</label>
    <referenceTo>Form_Question_Catalog__c</referenceTo>
    <relationshipLabel>Form Questions (Bindings)</relationshipLabel>
    <relationshipName>Form_Question_Bindings</relationshipName>
    <type>Lookup</type>
</CustomField>