field-forms/objects/Form_Question__c/fields/Include_Comment__c.field-meta.xml
<CustomField>
    <fullName>Include_Comment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Comment</label>
    <type>Checkbox</type>
</CustomField>