field-forms/objects/Form_Question__c/fields/Label_Visible__c.field-meta.xml
<CustomField>
    <fullName>Label_Visible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Label Visible</label>
    <type>Checkbox</type>
</CustomField>