field-forms/objects/Form_Question__c/fields/Lookup_Child_Object__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Child_Object__c</fullName>
    <description>For Lookup-type questions: API name of the child object referenced by the related list (e.g. WorkOrderLineItem). Required to qualify the field paths passed to getRelatedListRecords.</description>
    <inlineHelpText>API name of the child object. Example: WorkOrderLineItem</inlineHelpText>
    <label>Lookup Child Object</label>
    <length>120</length>
    <type>Text</type>
</CustomField>