field-forms/objects/Form_Question__c/fields/Lookup_Display_Field__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Display_Field__c</fullName>
    <description>For Lookup-type questions: field on the child record shown as the picker label (e.g. LineItemNumber). Defaults to Id if not set.</description>
    <inlineHelpText>Field on the child record to show in the picker. Example: LineItemNumber</inlineHelpText>
    <label>Lookup Display Field</label>
    <length>120</length>
    <type>Text</type>
</CustomField>