field-forms/objects/Form_Question__c/fields/Lookup_Related_List__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Related_List__c</fullName>
    <description>For Lookup-type questions: the API name of the related list to query on the host record (e.g. WorkOrderLineItems on a WorkOrder host).</description>
    <inlineHelpText>The relationship API name on the host record. Example: WorkOrderLineItems</inlineHelpText>
    <label>Lookup Related List</label>
    <length>120</length>
    <type>Text</type>
</CustomField>