field-forms/objects/Form_Question__c/fields/Min__c.field-meta.xml
<CustomField>
    <fullName>Min__c</fullName>
    <label>Min</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>