field-forms/objects/Form_Question__c/fields/Override_Question__c.field-meta.xml
<CustomField>
    <fullName>Override_Question__c</fullName>
    <description>Per-binding override of the question text from the linked catalog entry. Null means inherit from catalog (the common case). Snapshot writer prefers this over the catalog's Question__c when present. See Override badge UX in docs/phase-2-pillar-2-question-catalog.md.</description>
    <label>Override Question</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>