field-forms/objects/Form_Question__c/fields/Override_Required__c.field-meta.xml
<CustomField>
    <fullName>Override_Required__c</fullName>
    <description>Per-binding override of the Required__c flag from the linked catalog entry. "Inherit" (default) defers to the catalog. "Yes"/"No" override per binding. Tri-state via Picklist because Salesforce Checkbox is binary — there is no concept of a nullable boolean.</description>
    <label>Override Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inherit</fullName>
                <default>true</default>
                <label>Inherit</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>