field-forms/objects/Form_Question__c/fields/Slider_Size__c.field-meta.xml
<CustomField>
    <fullName>Slider_Size__c</fullName>
    <label>Slider Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>x-small</fullName>
            </value>
            <value>
                <fullName>small</fullName>
            </value>
            <value>
                <fullName>medium</fullName>
            </value>
            <value>
                <fullName>large</fullName>
            </value>
            <value>
                <fullName>full</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>